--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="correct_answers">Correct answers: 8/10</string>
     <string name="difficulty_easy">Difficulty: Easy</string>
     <string name="history_time">12 may 2019 20:32</string>
+    <string name="settings_fragment">Settings</string>
 </resources>
