--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="rate_us">Rate us</string>
     <string name="clear_history">Clear history</string>
     <string name="leave_feedback">Leave feedback</string>
+    <string name="version">v 1.0.0</string>
 </resources>
